fix navbar align issue

--- a/app/javascript/styles/main.scss
+++ b/app/javascript/styles/main.scss
@@ -1,5 +1,5 @@
 main {
-  @apply container mx-auto;
+  @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
 
   h1.heading {
     @apply text-4xl font-thin mb-2;
@@ -32,7 +32,7 @@ nav.nav {
 
 .starter {
   .main {
-    @apply max-w-7xl mx-auto py-12 px-4 sm:px-6 md:py-16 lg:px-8 lg:py-20;
+    @apply max-w-7xl mx-auto py-10;
 
     h2 {
       @apply text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl;
